--- a/client/src/components/footer/Footer.scss
+++ b/client/src/components/footer/Footer.scss
@@ -1,81 +1,80 @@
-.footer{
-    display: flex;
-    justify-content: center;
-    color: #fff;
-    // background-color: #0d084d;
-    // background-color: #33026a;
-    background-color: #314f73;
-    margin-top: 50px ;  
-    width: 100%; 
-    position: relative;
-    bottom: 0;
+.footer {
+	display: flex;
+	justify-content: center;
+	color: #fff;
+	background-color: #314f73;
+	margin-top: 50px;
+	width: 100%;
+	position: relative;
+	bottom: 0;
 
-    img{
-        width: 24px;
-        height: 24px;
-    }
-    .container{
-        width: 100%;
-        padding: 20px;
-        padding-top: 0;
+	img {
+		width: 24px;
+		height: 24px;
+		cursor: pointer;
+		transition: transform 0.2s ease;
 
-        .top{
-            display: flex;
-            justify-content: space-between;
+		&:hover {
+			transform: scale(1.1);
+		}
+	}
 
-            .item{
-                display: flex;
-                flex-direction: column;
-                gap: 20px;
+	.container {
+		width: 100%;
+		padding: 20px;
 
-                h2{
-                    font-size: 16px;
-                    color: #555;
-                }
+		hr {
+			margin-bottom: 25px;
+			height: 0;
+			border: 0.5px solid #6e8bb8;
+		}
 
-                span{
-                    font-weight: 300;
-                }
-            }
-        }
+		.bottom {
+			display: flex;
+			align-items: center;
+			justify-content: space-between;
+			flex-wrap: wrap;
 
-        hr{
-            margin-bottom: 25px;
-            height: 0;
-            border: 1px solid darkblue
-        }
+			.left {
+				display: flex;
+				align-items: center;
+				gap: 20px;
 
-        .bottom{
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
+				h2 {
+					font-size: 18px;
+					font-weight: 600;
+				}
 
-            .left{
-                display: flex;
-                align-items: center;
-                gap: 20px;
+				span {
+					font-size: 14px;
+					opacity: 0.8;
+				}
+			}
 
-                span{
-                    font-size: 14px;
-                }
-            }
-            .right{
-                display: flex;
-                align-items: center;
-                gap: 30px;
+			.right {
+				display: flex;
+				align-items: center;
+				gap: 30px;
 
-                .social{
-                    display: flex;
-                    align-items: center;
-                    gap: 20px;
-                }
+				.social {
+					display: flex;
+					align-items: center;
+					gap: 20px;
+				}
 
-                .link{
-                    display: flex;
-                    align-items: center;
-                    gap: 20px;
-                }
-            }
-        }
-    }
+				.link {
+					display: flex;
+					align-items: center;
+					gap: 10px;
+					font-size: 14px;
+					cursor: pointer;
+				}
+
+				.accessibility {
+					width: 28px;
+					height: 28px;
+				}
+			}
+		}
+	}
 }
