--- a/client/src/components/footer/Footer.scss
+++ b/client/src/components/footer/Footer.scss
@@ -3,7 +3,7 @@
 	justify-content: center;
 	color: #fff;
 	background-color: #314f73;
-	margin-top: 50px;
+
 	width: 100%;
 	position: relative;
 	bottom: 0;
@@ -22,6 +22,7 @@
 	.container {
 		width: 100%;
 		padding: 20px;
+		padding-top: 0;
 
 		hr {
 			margin-bottom: 25px;
