--- a/client/src/pages/home/Home.scss
+++ b/client/src/pages/home/Home.scss
@@ -6,20 +6,29 @@
 		padding: 80px 20px;
 		flex-wrap: wrap;
 
+		.crimson {
+			color: black;
+		}
+
 		&.dark {
 			background-color: #0d084d;
 
 			h1 {
-				color: white;
+				color: black;
+			}
+			&.dark {
+				color: black;
 			}
 
 			p {
-				color: #f1fdf7;
+				color: black !important;
 				margin-bottom: 20px;
+			}
+			&.dark {
+				color: black;
 			}
 
 			.title {
-				color: white !important;
 				font-weight: 300;
 				font-size: 14px;
 				display: flex;
