--- a/client/src/pages/myGigs/MyGigs.scss
+++ b/client/src/pages/myGigs/MyGigs.scss
@@ -1,54 +1,56 @@
-.myGigs{
-    display: flex;
-    justify-content: center;
+.myGigs {
+	display: flex;
+	justify-content: center;
 
-    .container{
-        width: 100%;
-        padding: 50px 0;
-        min-height: 69vh;
+	.container {
+		width: 94%;
+		margin: auto;
+		padding: 50px 0;
+		min-height: 69vh;
+		text-align: center;
 
-        .title{
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
+		.title {
+			display: flex;
+			align-items: center;
+			justify-content: space-between;
 
-            button{
-                background-color: #1dbf73;
-                color: white;
-                font-weight: 500;
-                border: none;
-                padding: 10px;
-                cursor: pointer;
-            }
-        }
+			button {
+				background-color: #1dbf73;
+				color: white;
+				font-weight: 500;
+				border: none;
+				padding: 10px;
+				cursor: pointer;
+			}
+		}
 
-        table{
-            width: 100%;
+		table {
+			width: 100%;
 
-            tr{
-                height: 50px;
+			tr {
+				height: 50px;
 
-                th{
-                    text-align: left;
-                }
+				th {
+					text-align: left;
+				}
 
-                td{
-                    .img{
-                    width: 50px;
-                    height: 25px;
-                    object-fit: cover;
-                    }
+				td {
+					.img {
+						width: 50px;
+						height: 25px;
+						object-fit: cover;
+					}
 
-                    .delete{
-                        width: 20px;
-                        cursor: pointer;
-                    }
-                }
+					.delete {
+						width: 20px;
+						cursor: pointer;
+					}
+				}
 
-                &:nth-child(even){
-                    background-color: #1dbf730f;
-                }
-            }
-        }
-    }
+				&:nth-child(even) {
+					background-color: #1dbf730f;
+				}
+			}
+		}
+	}
 }
